--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -2,7 +2,7 @@
   "name": "webpack-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "lodash": "^4.17.21",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
